changed site color palette

--- a/public_html/HeaderEffect/component.css
+++ b/public_html/HeaderEffect/component.css
@@ -12,7 +12,7 @@
 	position: absolute;
 	margin: 0;
 	padding: 0;
-	color: #f9f1e9;
+	color: white;
 	text-align: center;
 	top: 50%;
 	left: 50%;
@@ -24,7 +24,7 @@
 	font-size: 5vh;
 	letter-spacing: 0.1em;
 	padding: 10px 40px;
-	border: 10px double #f9f1e9;
+	border: 10px double white;
 	font-family:"JosefinSans Regular";
 }
 
