--- a/public_html/CaptionHoverEffects/component.css
+++ b/public_html/CaptionHoverEffects/component.css
@@ -31,7 +31,7 @@
 	top: 0;
 	left: 0;
 	padding: 20px;
-	background: #A4E8ED;
+	background: #E14658;
 	color: #fff;
 }
 
@@ -48,7 +48,7 @@
 	border-radius: 2px;
 	display: inline-block;
 	background: #fff;
-	color: #A4E8ED;
+	color: #E14658;
 }
 
 /* Individual Caption Styles */
