Changed color palette of site

--- a/public_html/CaptionHoverEffects/component.css
+++ b/public_html/CaptionHoverEffects/component.css
@@ -31,7 +31,7 @@
 	top: 0;
 	left: 0;
 	padding: 20px;
-	background: #E03C46;
+	background: #11999E;
 	color: #fff;
 }
 
@@ -49,7 +49,7 @@
 	border-radius: 2px;
 	display: inline-block;
 	background: #fff;
-	color: #E03C46;
+	color: #11999E;
 }
 
 /* Individual Caption Styles */
